opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Mounir Nasr Allah" "Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "https://github.com/mirage/irmin.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "dune" {build & >= "1.0"}
  "irmin" {>= "1.3.0"}
  "lwt"
  "irmin-mem" {test & >= "1.3.0"}
  "alcotest"  {test & >="0.4.1"}
]
available: [ocaml-version >= "4.01.0"]
