opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: ["Mounir Nasr Allah" "Thomas Gazagnaire"]
license: "ISC"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "4.01.0"}
  "dune" {build & >= "1.0"}
  "irmin" {>= "1.3.0"}
  "lwt"
  "irmin-mem" {with-test & >= "1.3.0"}
  "alcotest" {with-test & >= "0.4.1"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/irmin.git"
