opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: ["Thomas Gazagnaire" "Thomas Leonard"]
license: "ISC"
homepage: "https://github.com/mirage/irmin"
doc: "https://mirage.github.io/irmin/"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "4.01.0"}
  "dune" {build & >= "1.0"}
  "irmin" {>= "1.3.0"}
  "git" {>= "1.11.0" & < "1.12.0"}
  "alcotest" {with-test}
  "git-unix" {with-test & >= "1.11.4"}
  "mtime" {with-test & >= "1.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/irmin.git"
