opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire"
license: "ISC"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml"
  "dune" {build & >= "1.0"}
  "irmin" {>= "1.3.0"}
  "irmin-git" {>= "1.3.0"}
  "irmin-mem" {>= "1.3.0"}
  "git-mirage" {>= "1.11.4"}
  "ptime"
  "mirage-kv-lwt"
  "mirage-clock"
  "result"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/irmin.git"
