opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: ["Thomas Gazagnaire" "Thomas Leonard"]
license: "ISC"
homepage: "https://github.com/mirage/irmin"
doc: "https://mirage.github.io/irmin/"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0"}
  "result"
  "fmt" {>= "0.8.0"}
  "uri" {>= "1.3.12"}
  "cstruct" {>= "1.6.0"}
  "jsonm" {>= "1.0.0"}
  "lwt" {>= "2.4.7"}
  "ocamlgraph"
  "hex" {>= "0.2.0"}
  "logs" {>= "0.5.0"}
  "astring"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/irmin.git"
